--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=development
 APP_ENV=development
-SERVICE_NAME=cryptodenga
-DATABASE_NAME=cryptodenga_development
+SERVICE_NAME=cryptodry
+DATABASE_NAME=cryptodry_development
 DATABASE_USER=alekseimarkov
 DATABASE_PASS=
 DATABASE_HOST=localhost
