--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
 ENV=test
 APP_ENV=test
-SERVICE_NAME=cryptodenga
-DATABASE_NAME=cryptodenga_test
-DATABASE_USER=postgres
-DATABASE_PASS=postgres
+SERVICE_NAME=cryptodry
+DATABASE_NAME=cryptodry_test
+DATABASE_USER=alekseimarkov
+DATABASE_PASS=
 DATABASE_HOST=localhost
-DATABASE_PORT=6543
+DATABASE_PORT=5432
 DATABASE_POOL=10
 PER_PAGE_SIZE=25
