--- a/.env.test
+++ b/.env.test
@@ -2,8 +2,8 @@ ENV=test
 APP_ENV=test
 SERVICE_NAME=cryptodry
 DATABASE_NAME=cryptodry_test
-DATABASE_USER=alekseimarkov
-DATABASE_PASS=
+DATABASE_USER=postgres
+DATABASE_PASS=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_POOL=10
