--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ ENV=development
 APP_ENV=development
 SERVICE_NAME=cryptodry
 DATABASE_NAME=cryptodry_development
-DATABASE_USER=alekseimarkov
-DATABASE_PASS=
+DATABASE_USER=postgres
+DATABASE_PASS=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_POOL=10
